Versión simple, falta la firma

--- a/jsignpdf/src/main/java/net/sf/jsignpdf/SimpleSignPdfForm.form
+++ b/jsignpdf/src/main/java/net/sf/jsignpdf/SimpleSignPdfForm.form
@@ -80,7 +80,7 @@
                       <Component id="content" max="32767" attributes="0"/>
                       <Group type="102" attributes="0">
                           <Component id="btnPanel1" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace pref="430" max="32767" attributes="0"/>
+                          <EmptySpace pref="442" max="32767" attributes="0"/>
                           <Component id="btnPanel2" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
@@ -126,7 +126,7 @@
         </Component>
         <Component class="javax.swing.JButton" name="btnPanel1">
           <Properties>
-            <Property name="text" type="java.lang.String" value="jButton2"/>
+            <Property name="text" type="java.lang.String" value="Cerrar"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnPanel1ActionPerformed"/>
