--- a/jsignpdf/src/main/java/net/sf/jsignpdf/SimpleSignPdfForm.form
+++ b/jsignpdf/src/main/java/net/sf/jsignpdf/SimpleSignPdfForm.form
@@ -77,14 +77,15 @@
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="content" max="32767" attributes="0"/>
-                      <Group type="102" attributes="0">
+                      <Group type="102" alignment="0" attributes="0">
+                          <Component id="content" max="32767" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
+                      </Group>
+                      <Group type="102" alignment="0" attributes="0">
                           <Component id="btnPanel1" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace pref="442" max="32767" attributes="0"/>
-                          <Component id="btnPanel2" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace min="115" pref="532" max="32767" attributes="0"/>
                       </Group>
                   </Group>
-                  <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -94,10 +95,7 @@
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="content" pref="254" max="32767" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="btnPanel2" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="btnPanel1" alignment="3" min="-2" max="-2" attributes="0"/>
-                  </Group>
+                  <Component id="btnPanel1" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
               </Group>
           </Group>
@@ -116,14 +114,6 @@
             <Property name="rows" type="int" value="1"/>
           </Layout>
         </Container>
-        <Component class="javax.swing.JButton" name="btnPanel2">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="jButton3"/>
-          </Properties>
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnPanel2ActionPerformed"/>
-          </Events>
-        </Component>
         <Component class="javax.swing.JButton" name="btnPanel1">
           <Properties>
             <Property name="text" type="java.lang.String" value="Cerrar"/>
